--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: halcity
-description: Ryan's Blog
+title: DCRYAN'S BLOG
+description: DCRYAN'S BLOG
 
-url: halcity.github.io
+url: dcryan.com
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
